derive/tests/04-missing-lifetime.stderr
error: Exactly one lifetime parameter is required!
 --> tests/04-missing-lifetime.rs:8:9
  |
8 | struct S<T> {
  |         ^
